Minor corrections, Refactoring, updated Readme
